Search using elasticsearch

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,7 @@ DB_NAME=elasticsearch_react
 # Used by docker postgres
 POSTGRES_PASSWORD=p4$$w0rd
 POSTGRES_USER=elasticsearch_react
+
+# Used by elasticsearch
+ELASTICSEARCH_HOST=elasticsearch
+ELASTICSEARCH_PORT=9200
