--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - '.env'
 
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.5.3
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.10.2
     ports:
       - 9200:9200
       - 9300:9300
@@ -40,6 +40,8 @@ services:
       discovery.type: single-node
     volumes:
       - ./tmp/data/elasticsearch:/usr/share/elasticsearch/data
+    networks:
+      - backend
 
 volumes:
   postgres:
